@@ -4,8 +4,6 @@ beancount: TODO
 
   This can be broken down in three distinct aspects:
 
-  * Supporting the loading of encrypted files.
-
   * A plugin to merge a second file into the main one.
 
   * Reporting code to auto-generate a doc with account ids and other secret
